# Homegear-Somfy-TaHoma

./: CMakeLists.txt  configure.ac  makeRelease.sh
debian/: changelog  control  copyright  postinst  postrm  rules
misc/Config Directory/: somfytahoma.conf
src/: Api.cpp  Api.h  DescriptionCreator.cpp  DescriptionCreator.h  GD.cpp  GD.h  Interfaces.cpp  Interfaces.h  Makefile.am  MyCentral.cpp  MyCentral.h  MyFamily.cpp  MyFamily.h  MyPeer.cpp  MyPeer.h
src/PhysicalInterfaces/: Tahoma.cpp  Tahoma.h
